@@ -340,6 +340,7 @@ know what you're doing */
 #define NANO_HELP_FKEY		KEY_F(1)
 #define NANO_WHEREIS_KEY	NANO_CONTROL_W
 #define NANO_WHEREIS_FKEY	KEY_F(6)
+#define NANO_WHEREIS_NEXT_KEY	NANO_ALT_W
 #define NANO_REPLACE_KEY	NANO_CONTROL_4
 #define NANO_REPLACE_FKEY	KEY_F(14)
 #define NANO_ALT_REPLACE_KEY	NANO_ALT_R
@@ -398,7 +399,7 @@ know what you're doing */
 #define TOGGLE_MOUSE_KEY	NANO_ALT_M
 #define TOGGLE_CUTTOEND_KEY	NANO_ALT_K
 #define TOGGLE_REGEXP_KEY	NANO_ALT_R
-#define TOGGLE_WRAP_KEY		NANO_ALT_W
+#define TOGGLE_WRAP_KEY		NANO_ALT_L
 #define TOGGLE_BACKWARDS_KEY	NANO_ALT_B
 #define TOGGLE_CASE_KEY		NANO_ALT_C
 #define TOGGLE_LOAD_KEY		NANO_ALT_F
